fixed openapi
