# backend/internal/models/user.go
@@ -2,6 +2,6 @@ package models
 
 type User struct {
 	ID       int    `gorm:"column:id"`
-	Password string `json:"-"`
+	Password string `json:"password"`
 	Username string `json:"username"`
 }
